--- a/game-2048-example/kustomize/resources/deployment.yaml
+++ b/game-2048-example/kustomize/resources/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
         - name: backend
           # Replace the `<>` placeholders with your docker registry info
-          image: stumpaudracr.azurecr.io/game-2048:latest
+          image: stumpaudra.azurecr.io/game-2048:latest
           ports:
             - name: http
               containerPort: 8080
